{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 13,
  "lineage": "2804e094-7a4a-6d84-3084-b283e92722cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "WebEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e553747e6c10ae7",
            "arn": "arn:aws:ec2:us-east-1:124556085653:elastic-ip/eipalloc-00e553747e6c10ae7",
            "association_id": "eipassoc-08627645bb25bda49",
            "domain": "vpc",
            "id": "eipalloc-00e553747e6c10ae7",
            "instance": "i-0b4b246563d07b89b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-014dd57bed2251efc",
            "private_dns": "ip-10-82-2-10.ec2.internal",
            "private_ip": "10.82.2.10",
            "public_dns": "ec2-44-211-179-128.compute-1.amazonaws.com",
            "public_ip": "44.211.179.128",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "WebEIP"
            },
            "tags_all": {
              "Name": "WebEIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.web-eni",
            "aws_security_group.websg",
            "aws_subnet.websn",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c3389a4fa5bddaad",
            "arn": "arn:aws:ec2:us-east-1:124556085653:instance/i-0b4b246563d07b89b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4b246563d07b89b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "venkatkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-014dd57bed2251efc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-014dd57bed2251efc"
              }
            ],
            "primary_network_interface_id": "eni-014dd57bed2251efc",
            "private_dns": "ip-10-82-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.82.2.10",
            "public_ip": "98.92.157.186",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f1a74556c20301e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bc6b73d991bf737",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b30223173dccba9d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "i-0b4b246563d07b89b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.web-eni",
            "aws_security_group.websg",
            "aws_subnet.websn",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:internet-gateway/igw-0dbdb153089fc5d3c",
            "id": "igw-0dbdb153089fc5d3c",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "tags": {
              "Name": "webigw"
            },
            "tags_all": {
              "Name": "webigw"
            },
            "vpc_id": "vpc-006cad52bb477c608"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:network-interface/eni-014dd57bed2251efc",
            "attachment": [
              {
                "attachment_id": "eni-attach-014d44446aabdcab0",
                "device_index": 0,
                "instance": "i-0b4b246563d07b89b",
                "network_card_index": 0
              }
            ],
            "id": "eni-014dd57bed2251efc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:09:13:db:04:33",
            "owner_id": "124556085653",
            "private_ip": "10.82.2.10",
            "private_ip_list": [
              "10.82.2.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.82.2.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b30223173dccba9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bc6b73d991bf737",
            "tags": {
              "name": "web-eni"
            },
            "tags_all": {
              "name": "web-eni"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.websn",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:route-table/rtb-0e4ae7e4d80612da7",
            "id": "rtb-0e4ae7e4d80612da7",
            "owner_id": "124556085653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbdb153089fc5d3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webrt"
            },
            "tags_all": {
              "Name": "webrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cad52bb477c608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "rtb-0e4ae7e4d80612da7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.webigw",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006890a56c284ae33",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4ae7e4d80612da7",
            "subnet_id": "subnet-06bc6b73d991bf737"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.webigw",
            "aws_route_table.webrt",
            "aws_subnet.websn",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:security-group/sg-0b30223173dccba9d",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b30223173dccba9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "tags_all": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cad52bb477c608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "sg-0b30223173dccba9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "websn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:subnet/subnet-06bc6b73d991bf737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.82.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bc6b73d991bf737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124556085653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnt-web"
            },
            "tags_all": {
              "Name": "subnt-web"
            },
            "vpc_id": "vpc-006cad52bb477c608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "subnet-06bc6b73d991bf737",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124556085653:vpc/vpc-006cad52bb477c608",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.82.0.0/16",
            "default_network_acl_id": "acl-0c88818f4723f0e2e",
            "default_route_table_id": "rtb-0049009801ed2b9c3",
            "default_security_group_id": "sg-0368fee6519652770",
            "dhcp_options_id": "dopt-0ff27c422068a9353",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006cad52bb477c608",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0049009801ed2b9c3",
            "owner_id": "124556085653",
            "region": "us-east-1",
            "tags": {
              "Name": "webvpc"
            },
            "tags_all": {
              "Name": "webvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124556085653",
            "id": "vpc-006cad52bb477c608",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}